--- a/dockerfile-kasm-almalinux-8-desktop
+++ b/dockerfile-kasm-almalinux-8-desktop
@@ -10,84 +10,46 @@ ENV STARTUPDIR /dockerstartup
 WORKDIR $HOME
 
 ### Envrionment config
-ENV DEBIAN_FRONTEND noninteractive
-ENV KASM_RX_HOME $STARTUPDIR/kasmrx
-ENV INST_SCRIPTS $STARTUPDIR/install
-ENV DONT_PROMPT_WSL_INSTALL "No_Prompt_please"
+ENV SKIP_CLEAN=true \
+    KASM_RX_HOME=$STARTUPDIR/kasmrx \
+    DONT_PROMPT_WSL_INSTALL="No_Prompt_please" \
+    INST_DIR=$STARTUPDIR/install \
+    INST_SCRIPTS="/oracle/install/tools/install_tools_deluxe.sh \
+                  /oracle/install/misc/install_tools.sh \
+                  /ubuntu/install/chromium/install_chromium.sh \
+                  /ubuntu/install/firefox/install_firefox.sh \
+                  /oracle/install/sublime_text/install_sublime_text.sh \
+                  /ubuntu/install/nextcloud/install_nextcloud.sh \
+                  /oracle/install/vs_code/install_vs_code.sh \
+                  /ubuntu/install/remmina/install_remmina.sh \
+                  /oracle/install/only_office/install_only_office.sh \
+                  /oracle/install/gimp/install_gimp.sh \
+                  /oracle/install/zoom/install_zoom.sh \
+                  /oracle/install/ansible/install_ansible.sh \
+                  /oracle/install/terraform/install_terraform.sh \
+                  /oracle/install/telegram/install_telegram.sh \
+                  /oracle/install/obs/install_obs.sh \
+                  /ubuntu/install/thunderbird/install_thunderbird.sh \
+                  /ubuntu/install/cleanup/cleanup.sh"
 
+# Copy install scripts
+COPY ./src/ $INST_DIR
 
-### Install Tools
-COPY ./src/oracle/install/tools $INST_SCRIPTS/tools/
-RUN bash $INST_SCRIPTS/tools/install_tools_deluxe.sh  && rm -rf $INST_SCRIPTS/tools/
+# Run installations
+RUN \
+  for SCRIPT in $INST_SCRIPTS; do \
+    bash ${INST_DIR}${SCRIPT}; \
+  done && \
+  $STARTUPDIR/set_user_permission.sh $HOME && \
+  rm -f /etc/X11/xinit/Xclients && \
+  chown 1000:0 $HOME && \
+  mkdir -p /home/kasm-user && \
+  chown -R 1000:0 /home/kasm-user && \
+  rm -Rf ${INST_DIR}
 
-# Install Utilities
-COPY ./src/oracle/install/misc $INST_SCRIPTS/misc/
-RUN bash $INST_SCRIPTS/misc/install_tools.sh && rm -rf $INST_SCRIPTS/misc/
-
-# Install Chromium
-COPY ./src/ubuntu/install/chromium $INST_SCRIPTS/chromium/
-RUN bash $INST_SCRIPTS/chromium/install_chromium.sh  && rm -rf $INST_SCRIPTS/chromium/
-
-# Install Firefox
-COPY ./src/ubuntu/install/firefox/ $INST_SCRIPTS/firefox/
-COPY ./src/ubuntu/install/firefox/firefox.desktop $HOME/Desktop/
-RUN bash $INST_SCRIPTS/firefox/install_firefox.sh && rm -rf $INST_SCRIPTS/firefox/
-
-### Install Sublime Text
-COPY ./src/oracle/install/sublime_text $INST_SCRIPTS/sublime_text/
-RUN bash $INST_SCRIPTS/sublime_text/install_sublime_text.sh  && rm -rf $INST_SCRIPTS/sublime_text/
-
-### Install NextCloud
-COPY ./src/ubuntu/install/nextcloud $INST_SCRIPTS/nextcloud/
-RUN bash $INST_SCRIPTS/nextcloud/install_nextcloud.sh  && rm -rf $INST_SCRIPTS/nextcloud/
-
-### Install Remmina
-COPY ./src/ubuntu/install/remmina $INST_SCRIPTS/remmina/
-RUN bash $INST_SCRIPTS/remmina/install_remmina.sh  && rm -rf $INST_SCRIPTS/remmina/
-
-### Install Only Office
-COPY ./src/oracle/install/only_office $INST_SCRIPTS/only_office/
-RUN bash $INST_SCRIPTS/only_office/install_only_office.sh  && rm -rf $INST_SCRIPTS/only_office/
-
-### Install GIMP
-COPY ./src/oracle/install/gimp $INST_SCRIPTS/gimp/
-RUN bash $INST_SCRIPTS/gimp/install_gimp.sh  && rm -rf $INST_SCRIPTS/gimp/
-
-### Install Zoom
-COPY ./src/oracle/install/zoom $INST_SCRIPTS/zoom/
-RUN bash $INST_SCRIPTS/zoom/install_zoom.sh  && rm -rf $INST_SCRIPTS/zoom/
-
-### Install OBS Studio
-COPY ./src/oracle/install/obs $INST_SCRIPTS/obs/
-RUN bash $INST_SCRIPTS/obs/install_obs.sh  && rm -rf $INST_SCRIPTS/obs/
-
-### Install Ansible
-COPY ./src/oracle/install/ansible $INST_SCRIPTS/ansible/
-RUN bash $INST_SCRIPTS/ansible/install_ansible.sh  && rm -rf $INST_SCRIPTS/ansible/
-
-### Install Terraform
-COPY ./src/oracle/install/terraform $INST_SCRIPTS/terraform/
-RUN bash $INST_SCRIPTS/terraform/install_terraform.sh  && rm -rf $INST_SCRIPTS/terraform/
-
-### Install Telegram
-COPY ./src/oracle/install/telegram $INST_SCRIPTS/telegram/
-RUN bash $INST_SCRIPTS/telegram/install_telegram.sh  && rm -rf $INST_SCRIPTS/telegram/
-
-### Install Thunderbird
-COPY ./src/ubuntu/install/thunderbird $INST_SCRIPTS/thunderbird/
-RUN bash $INST_SCRIPTS/thunderbird/install_thunderbird.sh  && rm -rf $INST_SCRIPTS/thunderbird/
-
-#ADD ./src/common/scripts $STARTUPDIR
-RUN $STARTUPDIR/set_user_permission.sh $HOME
-
-RUN rm -f /etc/X11/xinit/Xclients
-
-RUN chown 1000:0 $HOME
-
+# Userspace Runtime
 ENV HOME /home/kasm-user
 WORKDIR $HOME
-RUN mkdir -p $HOME && chown -R 1000:0 $HOME
-
 USER 1000
 
 CMD ["--tail-log"]
