--- a/dockerfile-kasm-alpine-317-desktop
+++ b/dockerfile-kasm-alpine-317-desktop
@@ -10,88 +10,46 @@ ENV STARTUPDIR /dockerstartup
 WORKDIR $HOME
 
 ### Envrionment config
-ENV INST_SCRIPTS $STARTUPDIR/install
+ENV SKIP_CLEAN=true \
+    INST_DIR=$STARTUPDIR/install \
+    INST_SCRIPTS="/alpine/install/tools/install_tools_deluxe.sh \
+                  /alpine/install/misc/install_tools.sh \
+                  /alpine/install/chromium/install_chromium.sh \
+                  /alpine/install/firefox/install_firefox.sh \
+                  /alpine/install/remmina/install_remmina.sh \
+                  /alpine/install/gimp/gimp/install_gimp.sh \
+                  /alpine/install/ansible/install_ansible.sh \
+                  /alpine/install/terraform/install_terraform.sh \
+                  /alpine/install/thunderbird/install_thunderbird.sh \
+                  /alpine/install/audacity/install_audacity.sh \
+                  /alpine/install/blender/install_blender.sh \
+                  /alpine/install/geany/install_geany.sh \
+                  /alpine/install/inkscape/install_inkscape.sh \
+                  /alpine/install/libre_office/install_libre_office.sh \
+                  /alpine/install/pinta/install_pinta.sh \
+                  /alpine/install/obs/install_obs.sh \
+                  /alpine/install/filezilla/install_filezilla.sh \
+                  /ubuntu/install/langpacks/install_langpacks.sh \
+                  /ubuntu/install/cleanup/cleanup.sh" 
 
-### Install Tools
-COPY ./src/alpine/install/tools $INST_SCRIPTS/tools/
-RUN bash $INST_SCRIPTS/tools/install_tools_deluxe.sh  && rm -rf $INST_SCRIPTS/tools/
+# Copy install scripts
+COPY ./src/ $INST_DIR
 
-# Install Utilities
-COPY ./src/alpine/install/misc $INST_SCRIPTS/misc/
-RUN bash $INST_SCRIPTS/misc/install_tools.sh && rm -rf $INST_SCRIPTS/misc/
+# Run installations
+RUN \
+  for SCRIPT in $INST_SCRIPTS; do \
+    bash ${INST_DIR}${SCRIPT}; \
+  done && \
+  $STARTUPDIR/set_user_permission.sh $HOME && \
+  rm -f /etc/X11/xinit/Xclients && \
+  chown 1000:0 $HOME && \
+  mkdir -p /home/kasm-user && \
+  chown -R 1000:0 /home/kasm-user && \
+  rm -Rf ${INST_DIR}
 
-# Install Chromium
-COPY ./src/alpine/install/chromium $INST_SCRIPTS/chromium/
-RUN bash $INST_SCRIPTS/chromium/install_chromium.sh  && rm -rf $INST_SCRIPTS/chromium/
-
-# Install Firefox
-COPY ./src/alpine/install/firefox/ $INST_SCRIPTS/firefox/
-COPY ./src/alpine/install/firefox/firefox.desktop $HOME/Desktop/
-RUN bash $INST_SCRIPTS/firefox/install_firefox.sh && rm -rf $INST_SCRIPTS/firefox/
-
-### Install Remmina
-COPY ./src/alpine/install/remmina $INST_SCRIPTS/remmina/
-RUN bash $INST_SCRIPTS/remmina/install_remmina.sh  && rm -rf $INST_SCRIPTS/remmina/
-
-### Install GIMP
-COPY ./src/alpine/install/gimp $INST_SCRIPTS/gimp/
-RUN bash $INST_SCRIPTS/gimp/install_gimp.sh  && rm -rf $INST_SCRIPTS/gimp/
-
-### Install Ansible
-COPY ./src/alpine/install/ansible $INST_SCRIPTS/ansible/
-RUN bash $INST_SCRIPTS/ansible/install_ansible.sh  && rm -rf $INST_SCRIPTS/ansible/
-
-### Install Terraform
-COPY ./src/alpine/install/terraform $INST_SCRIPTS/terraform/
-RUN bash $INST_SCRIPTS/terraform/install_terraform.sh  && rm -rf $INST_SCRIPTS/terraform/
-
-### Install Thunderbird
-COPY ./src/alpine/install/thunderbird $INST_SCRIPTS/thunderbird/
-RUN bash $INST_SCRIPTS/thunderbird/install_thunderbird.sh  && rm -rf $INST_SCRIPTS/thunderbird/
-
-### Install Audacity
-COPY ./src/alpine/install/audacity $INST_SCRIPTS/audacity/
-RUN bash $INST_SCRIPTS/audacity/install_audacity.sh  && rm -rf $INST_SCRIPTS/audacity/
-
-### Install Blender
-COPY ./src/alpine/install/blender $INST_SCRIPTS/blender/
-RUN bash $INST_SCRIPTS/blender/install_blender.sh  && rm -rf $INST_SCRIPTS/blender/
-
-### Install Geany
-COPY ./src/alpine/install/geany $INST_SCRIPTS/geany/
-RUN bash $INST_SCRIPTS/geany/install_geany.sh  && rm -rf $INST_SCRIPTS/geany/
-
-### Install Inkscape
-COPY ./src/alpine/install/inkscape $INST_SCRIPTS/inkscape/
-RUN bash $INST_SCRIPTS/inkscape/install_inkscape.sh  && rm -rf $INST_SCRIPTS/inkscape/
-
-### Install LibreOffice
-COPY ./src/alpine/install/libre_office $INST_SCRIPTS/libre_office/
-RUN bash $INST_SCRIPTS/libre_office/install_libre_office.sh  && rm -rf $INST_SCRIPTS/libre_office/
-
-### Install Pinta
-COPY ./src/alpine/install/pinta $INST_SCRIPTS/pinta/
-RUN bash $INST_SCRIPTS/pinta/install_pinta.sh  && rm -rf $INST_SCRIPTS/pinta/
-
-### Install OBS
-COPY ./src/alpine/install/obs $INST_SCRIPTS/obs/
-RUN bash $INST_SCRIPTS/obs/install_obs.sh  && rm -rf $INST_SCRIPTS/obs/
-
-### Install Filezilla
-COPY ./src/alpine/install/filezilla $INST_SCRIPTS/filezilla/
-RUN bash $INST_SCRIPTS/filezilla/install_filezilla.sh  && rm -rf $INST_SCRIPTS/filezilla/
-
-#ADD ./src/common/scripts $STARTUPDIR
-RUN $STARTUPDIR/set_user_permission.sh $HOME
-
-RUN rm -f /etc/X11/xinit/Xclients
-
-RUN chown 1000:0 $HOME
-
+# Userspace Runtime 
 ENV HOME /home/kasm-user
 WORKDIR $HOME
-RUN mkdir -p $HOME && chown -R 1000:0 $HOME
-
 USER 1000
 
 CMD ["--tail-log"]
