--- a/src/ubuntu/install/dind/dockerd.conf
+++ b/src/ubuntu/install/dind/dockerd.conf
@@ -1,5 +1,5 @@
 [program:dockerd]
-command=/usr/local/bin/dockerd
+command=/usr/local/bin/dockerd-entrypoint.sh
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/dockerd.err.log
